@@ -299,6 +299,30 @@ ithAnimUnit <- function(animValues, origValue, i) {
                  au$timeid[au$id == i])
 }
 
+######################
+# applyAnimation methods
+#
+# There is one of these for each primitive, but they all have similar
+# structure:
+
+# if (group)
+#     animate the <g> element
+
+# else
+
+#     some sets of values (e.g., x/y) are animated together
+#     so bail out if this combination has already been animated
+
+#     recycle animation values to full length
+
+#     for each shape ...
+
+#         select anim values
+#         animate sets of values
+#         animate anything else
+
+######################
+
 applyAnimation.rect <- function(x, animSet, animation, group, dev) {
 
     if (group) {
@@ -831,11 +855,166 @@ applyAnimation.segments <- function(x, animSet, animation, group, dev) {
         }
     }
 }
-  
-# FIXME:  polygons, xsplines, pathgrob, rastergrob
+
+applyAnimation.polygon <- function(x, animSet, animation, group, dev) {
+    if (group) {
+        svgAnimate(animation,
+                   paste(ithValue(animSet$animations[[animation]], 1),
+                         collapse=";"),
+                   animSet$begin, animSet$interp, animSet$dur,
+                   animSet$rep, animSet$rev,
+                   x$name, dev@dev)
+    } else {
+        
+        if (doNotAnimate(animSet, animation))
+            return()
+    
+        # If we only have one polygon
+        if (is.null(x$id) && is.null(x$id.lengths)) {
+            x$id <- rep(1L, length(x$x))
+        }
+
+        # Multiple polygons exist
+        if (is.null(x$id)) {
+            n <- length(x$id.lengths)
+            id <- rep(1L:n, x$id.lengths)
+        } else {
+            n <- length(unique(x$id))
+            id <- x$id
+        }
+
+        # Repeating animation parameters so that each element can have
+        # distinct values
+        begin <- rep(animSet$begin, length.out = n)
+        interp <- rep(animSet$interp, length.out = n)
+        dur <- rep(animSet$duration, length.out = n)
+        rep <- rep(animSet$rep, length.out = n)
+        rev <- rep(animSet$revert, length.out = n)
+
+        for (i in 1:n) {
+            subName <- subGrobName(x$name, i)
+        
+            if ("x" %in% names(animSet$animations)) {
+                au <- ithAnimUnit(animSet$animations$x, x$x, i)
+                xx <- au$values
+                timeid <- au$timeid
+            } else {
+                xx <- x$x[x$id == i]
+            }
+            if ("y" %in% names(animSet$animations)) {
+                au <- ithAnimUnit(animSet$animations$y, x$y, i)
+                yy <- au$values
+                timeid <- au$timeid
+            } else {
+                yy <- x$y[x$id == i]
+            }
+
+            if (any(c("x", "y") %in% names(animSet$animations))) {
+                loc <- locToInches(xx, yy, dev)
+                svgAnimatePoints(cx(loc$x, dev), cy(loc$y, dev), timeid,
+                                 begin[i], interp[i], dur[i], rep[i], rev[i],
+                                 subName, dev@dev)
+            }
+            # Any other attribute
+            if (!(animation %in% c("x", "y"))) {
+                svgAnimate(animation,
+                           paste(ithValue(animSet$animations[[animation]], i),
+                                 collapse=";"),
+                           begin[i], interp[i], dur[i], rep[i], rev[i],
+                           subName, dev@dev)
+            }
+        }
+    }
+}
+
+applyAnimation.pathgrob <- function(x, animSet, animation, group, dev) {
+    if (group) {
+        svgAnimate(animation,
+                   paste(ithValue(animSet$animations[[animation]], 1),
+                         collapse=";"),
+                   animSet$begin, animSet$interp, animSet$dur,
+                   animSet$rep, animSet$rev,
+                   x$name, dev@dev)
+    } else {
+        
+        if (doNotAnimate(animSet, animation))
+            return()
+
+        # NOTE:  only ever drawing ONE line
+        begin <- animSet$begin
+        interp <- animSet$interp
+        dur <- animSet$duration
+        rep <- animSet$rep
+        rev <- animSet$revert
+
+        subName <- subGrobName(x$name, 1)
+
+        # Rather than looping through 'n' different shapes
+        # need to generate a set of animation values for a
+        # single shape consisting of multiple sub-paths
+        # at multiple time points
+
+        # If we only have one sub-path
+        if (is.null(x$id) && is.null(x$id.lengths)) {
+            x$id <- rep(1L, length(x$x))
+        }
+
+        # Multiple sub-paths
+        if (is.null(x$id)) {
+            n <- length(x$id.lengths)
+            id <- rep(1L:n, x$id.lengths)
+        } else {
+            n <- length(unique(x$id))
+            id <- x$id
+        }
+            
+        # NOTE:  according to the SVG spec, I think the animated values
+        #        HAVE to follow the original series of M, L, Z to be
+        #        valid;  otherwise behaviour of browser is undefined?
+        if ("x" %in% names(animSet$animations)) {
+            au <- as.animUnit(animSet$animations$x, attr(x$x, "unit"))
+            xx <- au$values
+            pathid <- au$id
+            timeid <- au$timeid
+        } else {
+            xx <- x$x
+        }
+        if ("y" %in% names(animSet$animations)) {
+            au <- as.animUnit(animSet$animations$y, attr(x$y, "unit"))
+            yy <- au$values
+            pathid <- au$id
+            timeid <- au$timeid
+        } else {
+            yy <- x$y
+        }
+
+        # Only one sub-path
+        if (is.null(pathid)) {
+            pathid <- rep(id, length.out=length(timeid))
+        }
+    
+        if (any(c("x", "y") %in% names(animSet$animations))) {
+            loc <- locToInches(xx, yy, dev)
+            svgAnimatePath(cx(loc$x, dev), cy(loc$y, dev), pathid, timeid,
+                           begin, interp, dur, rep, rev, subName, dev@dev)
+        }
+        # Any other attribute
+        if (!(animation %in% c("x", "y"))) {
+            svgAnimate(animation,
+                       paste(ithValue(animSet$animations[[animation]], 1),
+                             collapse=";"),
+                       begin, interp, dur, rep, rev, subName, dev@dev)
+        }
+    }  
+}
+
+
+# FIXME:  xsplines, pathgrob, rastergrob
+
 applyAnimation.grob <- function(x, ...) {
     # If we got here, then we've hit something that is not yet implemented
-    stop(paste("Animation of ", class(x)[1], " objects is not yet implemented",
+    stop(paste("Animation of ", paste(class(x), collapse=":"),
+               " objects is not yet implemented",
                sep=""))
 }
 
