@@ -252,6 +252,120 @@ grid.animate("segments",
              duration=3)
 gridToSVG("anim-segments-complex.svg")
 
+# Animating polygons
+
+# Simple case
+# (polygon only has three points,
+#  animation only has two points, only animate x)
+grid.newpage()
+grid.text("Single polygon slides to the right",
+          y=unit(1, "lines"))
+grid.rect()
+grid.polygon(c(.1, .2, .3),
+              c(.4, .6, .4), name="polygon")
+grid.animate("polygon",
+             x=animUnit(unit(c(.1, .2, .3,
+                               .7, .8, .9),
+                             unit="npc"),
+                        timeid=rep(1:2, each=3)),
+             duration=3)
+gridToSVG("anim-polygon-simple.svg")
+
+# Complex case
+# (two polygons, animation has many points, animate x and y)
+grid.newpage()
+grid.text("Two polygons shrink and grow (flipped) then revert",
+          y=unit(1, "lines"))
+grid.rect()
+grid.polygon(c(.2, .3, .4,
+               .6, .7, .8),
+             c(.4, .6, .4, .6, .4, .6),
+             id=rep(1:2, each=3), name="polygon")
+grid.animate("polygon",
+             x=animUnit(unit(c(.2, .3, .4,
+                               .4, .3, .2,
+                               .2, .3, .4,
+ 
+                               .6, .7, .8,
+                               .8, .7, .6,
+                               .6, .7, .8),
+                             "npc"),
+                        id=rep(1:2, each=9),
+                        timeid=rep(rep(1:3, each=3), 2)),
+             y=animUnit(unit(c(.4, .6, .4,
+                               .6, .4, .6,
+                               .4, .6, .4,
+                               
+                               .6, .4, .6,
+                               .4, .6, .4,
+                               .6, .4, .6),
+                             "npc"),
+                        id=rep(1:2, each=9),
+                        timeid=rep(rep(1:3, each=3), 2)),
+             duration=5)
+gridToSVG("anim-polygon-complex.svg")
+
+# Animating paths
+
+# Simple case
+# (path has one sub-path,
+#  animation only has two points, only animate x)
+grid.newpage()
+grid.text("Single simple path (triangle) slides to the right",
+          y=unit(1, "lines"))
+grid.rect()
+grid.path(c(.1, .2, .3),
+          c(.4, .6, .4),
+          gp=gpar(fill="black"),
+          name="path")
+grid.animate("path",
+             x=animUnit(unit(c(.1, .2, .3,
+                               .7, .8, .9),
+                             unit="npc"),
+                        timeid=rep(1:2, each=3)),
+             duration=3)
+gridToSVG("anim-path-simple.svg")
+
+# Complex case
+# (two polygons, animation has many points, animate x and y)
+grid.newpage()
+grid.text("Single complex path transmogrifies as it slides to the right",
+          y=unit(1, "lines"))
+grid.rect()
+grid.path(c(.1, .1, .4, .4,
+            .2, .2, .3, .3),
+          c(.2, .8, .8, .2,
+            .4, .6, .6, .4),
+          id=rep(1:2, each=4),
+          rule="evenodd",
+          gp=gpar(fill="black"),
+          name="path")
+grid.animate("path",
+             x=animUnit(unit(c(.1, .1, .4, .4,
+                               .2, .2, .3, .3,
+
+                               .35, .35, .65, .65,
+                               .45, .45, .55, .55,
+               
+                               .6, .6, .9, .9,
+                               .7, .7, .8, .8),
+                             unit="npc"),
+                        id=rep(rep(1:2, each=4), 3),
+                        timeid=rep(1:3, each=8)),
+             y=animUnit(unit(c(.2, .8, .8, .2,
+                               .4, .6, .6, .4,
+
+                               .4, .6, .6, .4,
+                               .2, .8, .8, .2,
+
+                               .2, .8, .8, .2,
+                               .4, .6, .6, .4),
+                             unit="npc"),
+                        id=rep(rep(1:2, each=4), 3),
+                        timeid=rep(1:3, each=8)),               
+             duration=3)
+gridToSVG("anim-path-complex.svg")
+
 ############################################
 
 # Multiple animations on same grob
